--- a/c-legacy-releases/2023/10042023.md
+++ b/c-legacy-releases/2023/10042023.md
@@ -6,14 +6,14 @@ last-update: October 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: be5a9ab0-ab66-49de-885e-88bad6ab8985
-source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
-workflow-type: ht
+source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+workflow-type: tm+mt
 source-wordcount: '6062'
-ht-degree: 100%
+ht-degree: 99%
 
 ---
 
-# Experience Cloud 版本注意事項 - 2023 年 10 月
+# Experience Cloud版本注意事項 — 2023年10月
 
 <!-- badgeReview: label="Internal Review" type="Negative" -->
 
@@ -70,7 +70,7 @@ ht-degree: 100%
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 9 月 | Experience Cloud | [設定有效的 Audience Activation 策略](https://experienceleague.adobe.com/docs/events/adobe-customer-success-webinar-recordings/2023/audience-activation.html?lang=zh-Hant) | 客戶成功網路研討會 | 了解資料管理策略的重要性、Adobe Audience Manager 概觀和功能、Adobe Audience Manager 使用案例、制定資料管理策略的行動計劃 |
-| 2023 年夏季 | Experience Cloud | [Experience Cloud 應用程式的整合教學課程首頁](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/overview.html) | 影片 | 了解最常見的 Experience Cloud 應用程式整合。您可依照[解決方案](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/solution-categories/overview.html?lang=zh-Hant)或[應用程式](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/integrations-between-applications/overview.html?lang=zh-Hant)瀏覽整合教學課程。此內容會經常更新，因此請經常回來查看。 |
+| 2023 年夏季 | Experience Cloud | [Experience Cloud 應用程式的整合教學課程首頁](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/overview.html?lang=zh-Hant) | 影片 | 了解最常見的 Experience Cloud 應用程式整合。您可依照[解決方案](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/solution-categories/overview.html?lang=zh-Hant)或[應用程式](https://experienceleague.adobe.com/docs/integrations-learn/experience-cloud/integrations-between-applications/overview.html?lang=zh-Hant)瀏覽整合教學課程。此內容會經常更新，因此請經常回來查看。 |
 
 {style="table-layout:auto"}
 
@@ -84,7 +84,7 @@ ht-degree: 100%
 
 ## ![圖示](/assets/certification-badge.png)認證{#certification}
 
-請注意，所有 Adobe 認證候選者！造訪 Experience League 上的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/program/overview.html)網站。
+請注意，所有 Adobe 認證候選者！造訪 Experience League 上的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/program/overview.html?lang=zh-Hant)網站。
 
 +++詳細資訊
 
@@ -120,7 +120,7 @@ ht-degree: 100%
 
 有關最近的功能更新，請參閱：
 
-* [2023 年 8 月](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/08092023.html#status)
+* [2023 年 8 月](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/08092023.html?lang=zh-Hant#status)
 * [2023 年 3 月](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/03082023.html?lang=zh-Hant#status)
 * [2023 年 1 月](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status)
 
@@ -156,7 +156,7 @@ ht-degree: 100%
 | 2023 年 9 月 | 目的地 | [在 Experience Platform 中設定資料集匯出目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/configure-dataset-export-destination.html) | 影片 | 了解關於使用目標連線將資料集從 Adob&#x200B;&#x200B;e Experience Platform 匯出到雲端儲存空間位置的設定、工作流程和使用案例。 |
 | 2023 年 9 月 | 資料收集 | [在資料收集中使用快速啟動工作流程](https://experienceleague.adobe.com/docs/platform-learn/data-collection/event-forwarding/quick-start-workflows.html) | 影片 | 了解關於進階使用案例以充分利用 [!DNL Facebook]（[!DNL Meta]) [!UICONTROL 資料收集]中的快速啟動工作流程 |
 | 2023 年 9 月 | Privacy Service | [Privacy Service 簡介](https://experienceleague.adobe.com/docs/platform-learn/tutorials/privacy/introduction-to-privacy-services.html?lang=zh-Hant) | 多部影片 | 了解隱私權法規及其對資料操作的影響。同時也了解 [!UICONTROL Privacy Service] 如何因應這些挑戰。檢視 [!DNL Experience Platform] 教學課程中「隱私權與安全性」部分的最新影片。 |
-| 2023 年 9 月 | 管理 | [設定以屬性為基礎的存取控制](https://experienceleague.adobe.com/docs/platform-learn/tutorials/admin/configure-attribute-based-access-control.html) | 影片 | 了解如何配置以屬性為基礎的存取控制，以限制對特定 [!DNL Experience Platform] 資源的存取。 |
+| 2023 年 9 月 | 管理 | [設定以屬性為基礎的存取控制](https://experienceleague.adobe.com/docs/platform-learn/tutorials/admin/configure-attribute-based-access-control.html?lang=zh-Hant) | 影片 | 了解如何配置以屬性為基礎的存取控制，以限制對特定 [!DNL Experience Platform] 資源的存取。 |
 
 {style="table-layout:auto"}
 
@@ -183,10 +183,10 @@ ht-degree: 100%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- |---------- |
-| 2023 年 9 月 | [使用合作夥伴輔助的訪客識別，為未知的訪客提供個人化的現場體驗](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/unknown-visitor-personalization-partner-data.html) | 影片 | 了解如何從 [!DNL Experience Platform] [!UICONTROL Web SDK] 收集第三方屬性，並使用合作夥伴輔助的訪客識別功能，為未知的訪客提供個人化的現場體驗。 |
-| 2023 年 9 月 | [將合作夥伴屬性新增至 Real-Time CDP 中的第一方設定檔](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/partner-enrichment-partner-data.html) | 影片 | 了解如何將合作夥伴屬性新增至您的第一方設定檔，以透過 [!DNL Real-Time CDP] 中的其他管道擴大觸及範圍。 |
-| 2023 年 9 月 | [Real-Time CDP 中的合作夥伴資料支援概觀](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/partner-data-support-overview.html) | 影片 | 了解 [!DNL Real-Time Customer Data Platform] 如何在第三方 Cookie 繼續過時之下，支援使用合作夥伴資料進行完整漏斗行銷，以擴充第一方資料和挖掘潛在客戶使用案例。 |
-| 2023 年 9 月 | [使用 Real-time CDP 中的合作夥伴資料支援離站挖掘潛在客戶使用案例](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/offsite-prospecting-partner-data.html) | 影片 | 了解 [!DNL Real-Time CDP] 中用於從合作夥伴擷取新潛在客戶的工作流程，以進行造訪前目標定位。 |
+| 2023 年 9 月 | [使用合作夥伴輔助的訪客識別，為未知的訪客提供個人化的現場體驗](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/unknown-visitor-personalization-partner-data.html?lang=zh-Hant) | 影片 | 了解如何從 [!DNL Experience Platform] [!UICONTROL Web SDK] 收集第三方屬性，並使用合作夥伴輔助的訪客識別功能，為未知的訪客提供個人化的現場體驗。 |
+| 2023 年 9 月 | [將合作夥伴屬性新增至 Real-Time CDP 中的第一方設定檔](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/partner-enrichment-partner-data.html?lang=zh-Hant) | 影片 | 了解如何將合作夥伴屬性新增至您的第一方設定檔，以透過 [!DNL Real-Time CDP] 中的其他管道擴大觸及範圍。 |
+| 2023 年 9 月 | [Real-Time CDP 中的合作夥伴資料支援概觀](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/partner-data-support-overview.html?lang=zh-Hant) | 影片 | 了解 [!DNL Real-Time Customer Data Platform] 如何在第三方 Cookie 繼續過時之下，支援使用合作夥伴資料進行完整漏斗行銷，以擴充第一方資料和挖掘潛在客戶使用案例。 |
+| 2023 年 9 月 | [使用 Real-time CDP 中的合作夥伴資料支援離站挖掘潛在客戶使用案例](https://experienceleague.adobe.com/docs/platform-learn/tutorials/partner-data-support/offsite-prospecting-partner-data.html?lang=zh-Hant) | 影片 | 了解 [!DNL Real-Time CDP] 中用於從合作夥伴擷取新潛在客戶的工作流程，以進行造訪前目標定位。 |
 
 {style="table-layout:auto"}
 
@@ -217,8 +217,8 @@ ht-degree: 100%
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [使用長條圖解鎖深入分析：運用 Analytics 超越平均水平](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/unlocking-insights-with-histograms.html?lang=zh-Hant) | 影片 | 探索長條圖在分析中的影響，以取得超過平均水準的深入分析。長條圖會顯示客戶行為、訪客參與度、技術效能和表單錯誤等的資料模式，促使在 Adobe Workspace 中實現更深入的分析和明智的決策。 |
-| 2023 年 9 月 | [專案內部或外部的連結](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/linking-inside-or-outside-of-your-project.html) | 影片 | 了解如何在您的 [!UICONTROL Analysis Workspace] 專案中建立內部或外部連結。 |
-| 2023 年 9 月 | [在計算量度中使用維度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/components/calculated-metrics/using-dimensions-in-calculated-metrics.html) | 更新的影片 | 了解如何在[!UICONTROL 計算量度]產生器中使用維度。您可將它們新增到任何[!UICONTROL 計算量度]公式，將新量度限制為維度或維度值。 |
+| 2023 年 9 月 | [專案內部或外部的連結](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/linking-inside-or-outside-of-your-project.html?lang=zh-Hant) | 影片 | 了解如何在您的 [!UICONTROL Analysis Workspace] 專案中建立內部或外部連結。 |
+| 2023 年 9 月 | [在計算量度中使用維度](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/components/calculated-metrics/using-dimensions-in-calculated-metrics.html?lang=zh-Hant) | 更新的影片 | 了解如何在[!UICONTROL 計算量度]產生器中使用維度。您可將它們新增到任何[!UICONTROL 計算量度]公式，將新量度限制為維度或維度值。 |
 
 ### Adobe [!DNL Analytics]支援知識庫{#kb-analytics}
 
@@ -252,9 +252,9 @@ ht-degree: 100%
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [使用物件陣列 (在  [!DNL Customer Journey Analytics]](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/use-cases/complex-data/object-arrays-in-cja.html) 中) | 影片 | 了解如何利用 CJA 中的設定檔和尋找資料集的物件陣列來豐富您的 B2B 和 B2C 分析 (從連接到資料檢視和 Workspace) |
-| 2023 年 9 月 | [使用資料字典](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/data-dictionary/use-data-dictionary.html) | 影片 | 了解適用於 [!DNL Customer Journey Analytics] 的[!UICONTROL Analysis Workspace] 中的[!UICONTROL 資料字典]。 |
-| 2023 年 9 月 | [[!UICONTROL Analysis Workspace] 概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/workspace-projects/analysis-workspace-overview.html) | 影片 | 了解關於在 [!UICONTROL Analysis Workspace] 中用來建立專案和儀表板的基本元件；Analysis Workspace 是靈活、自由格式的分析環境，用來探索和視覺化 Experience Platform 中的資料。 |
-| 2023 年 9 月 | [[!UICONTROL 在 Analysis Workspace 中建立新專案]](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/workspace-projects/build-a-new-project.html) | 影片 | 了解如何在 [!UICONTROL Analysis Workspace] 為 [!DNL Customer Journey Analytics] 建立基本專案。 |
+| 2023 年 9 月 | [使用資料字典](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/data-dictionary/use-data-dictionary.html?lang=zh-Hant) | 影片 | 了解適用於 [!DNL Customer Journey Analytics] 的[!UICONTROL Analysis Workspace] 中的[!UICONTROL 資料字典]。 |
+| 2023 年 9 月 | [[!UICONTROL Analysis Workspace] 概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/workspace-projects/analysis-workspace-overview.html?lang=zh-Hant) | 影片 | 了解關於在 [!UICONTROL Analysis Workspace] 中用來建立專案和儀表板的基本元件；Analysis Workspace 是靈活、自由格式的分析環境，用來探索和視覺化 Experience Platform 中的資料。 |
+| 2023 年 9 月 | [[!UICONTROL 在 Analysis Workspace 中建立新專案]](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/analysis-workspace/workspace-projects/build-a-new-project.html?lang=zh-Hant) | 影片 | 了解如何在 [!UICONTROL Analysis Workspace] 為 [!DNL Customer Journey Analytics] 建立基本專案。 |
 
 {style="table-layout:auto"}
 
@@ -363,7 +363,7 @@ _新功能_
 * **[Adobe Analytics 與適用於表單的 Experience Cloud Setup Automation](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/services/enable-adobe-analytics-adaptive-form-using-experience-cloud-setup-automation.html?lang=zh-Hant)** – 現在起，輕按幾個按鈕即可啟用 Adobe Analytics 和 Experience Cloud Setup Automation。這能讓您將 AEM Forms as a Cloud Service 與 Experience Platform 標籤和 Adobe Analytics 連接，以擷取和追蹤已發佈表單的效能指標。
 * **[適用於調適型表單的 Adobe Analytics 報告範本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/services/view-understand-aem-forms-analytics-reports.html?lang=zh-Hant)** – Forms as a Cloud Service 現在提供 Adobe Analytics 報告 OOTB。這有助於輕鬆了解表單的效能。表單層級的量度可讓您深入了解表單在多個關鍵效能指標 (KPI) 上的表現，例如呈現、訪客、提交、平均填寫時間。透過追蹤使用者行為和意見回饋，您可以識別表單中造成混亂的部分，並引導表單在設計和功能方面的改善。
 * **[以核心元件為主的調適型表單中的表單片段](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/adaptive-form-fragments-core-components.html?lang=zh-Hant)** – 告別重複的資料、最佳化您的數位庫存，並可改善協作，同時還可使用表單片段提升表單建構體驗。這些可重複使用的元件會無縫整合到多個表單中，讓您更輕鬆建立一致且具有專業外觀的表單。表單片段透過「一次變更，處處反映」功能確保可重複性、標準化和品牌一致性。在一處進行的更新會自動傳播到使用這些片段的所有表單，因此可體驗更高的可維護性和效率。
-* **[更佳的 Adob&#x200B;&#x200B;e Sign 工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=zh-Hant#sign-document-step-sign-document-step)** – Adobe Sign 工作流程步驟經過改善，其中包括：
+* **[更佳的 Adobe Sign 工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=zh-Hant#sign-document-step-sign-document-step)** – Adobe Sign 工作流程步驟經過改善，其中包括：
 
    * **Adobe Sign 以政府核發 ID 為主的驗證** – Adobe Acrobat Sign 以政府核發 ID 為主的驗證允許使用者使用政府核發的 ID (駕&#x200B;&#x200B;駛執照、國民身份證、護照) 驗證其身份，進而提&#x200B;&#x200B;供更多的驗證防護層。此增強功能利用受信任的身分識別文件為簽名過程額外增加一層可信度，使其成為需要增強安全性、合規性和使用者驗證等情境的理想選擇。
    * **Adobe Sign 文件的稽核軌跡** – 使用稽核軌跡功能詳細了解 Adobe Sign 文件的生命週期。有了稽核軌跡，您現在就可以保留與文件相關之所有動作和互動的全面記錄了。此記錄包括曾檢視、編輯或簽署文件之人員的詳細資料，以及每個事件的時間戳記。此記錄增強功能對於維持合規性、解決爭議和確保數位協議的完整性至關重要。
@@ -422,7 +422,7 @@ _早期採用者計劃_
    * 此功能可使用的早期採用者計劃很有限。
    * 此功能用於恢復意外刪除的內容，不適用於災難復原。
 
-* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard.html)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的深入解析和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
+* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard.html?lang=zh-Hant)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的深入解析和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
 
   該儀表板使用 Google Lighthouse，這是一種開放原始碼自動化工具，可提升網頁應用程式的品質。您可以在任何公開網頁或需要驗證的任何網頁上執行此功能。可用於對效能、協助工具、漸進式網頁應用程式、SEO 等進行稽核。
 
@@ -448,7 +448,7 @@ _版本重點_
 
 >[!NOTE]
 >
->AEM 6.4 現在已終止延伸支援。如需更多詳細資料，請參閱 Adobe 的[技術支援期間](https://helpx.adobe.com/tw/support/programs/eol-matrix.html)。請到[這裡](https://experienceleague.adobe.com/docs/?lang=en)尋找支援的版本。
+>AEM 6.4 現在已終止延伸支援。如需更多詳細資料，請參閱 Adobe 的[技術支援期間](https://helpx.adobe.com/tw/support/programs/eol-matrix.html)。請到[這裡](https://experienceleague.adobe.com/docs/?lang=zh-Hant)尋找支援的版本。
 
 >[!IMPORTANT]
 >
@@ -495,8 +495,8 @@ _已知問題_
 * [Experience Manager Brand Portal 發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
 * [Experience Manager 桌面應用程式發行說明](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html?lang=zh-Hant)
 * [Experience Manager Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html?lang=zh-Hant)
-* [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)
-* [Livefyre 發行說明](https://experienceleague.adobe.com/docs/discontinued/using/livefyre.html)
+* [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)
+* [Livefyre 發行說明](https://experienceleague.adobe.com/docs/discontinued/using/livefyre.html?lang=zh-Hant)
 
 ### 最新 Experience Manager 教學課程與課程 {#tutorials-aem}
 
@@ -533,7 +533,7 @@ _已知問題_
 * [Experience Manager as a Cloud Service 指南](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/home.html?lang=zh-Hant)
 * [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html?lang=zh-Hant)
 * [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html?lang=zh-Hant)
-* [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
+* [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html?lang=zh-Hant)
 * [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=zh-Hant#previous-updates)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html?lang=zh-Hant)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html?lang=zh-Hant#aem-as-a-cloud-service)
@@ -557,12 +557,12 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 +++詳細資訊
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html)以取得最新資訊。
-* 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html)以存取個別的產品發行說明並確認可用性。
+* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
+* 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html)。
+>[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
@@ -571,13 +571,13 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 9 月 | [管理公司信用](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/company-credit.html) | 影片 | 了解 B2B 公司帳戶使用者如何使用帳戶購買，並達到獲得的額度上限為止。 |
-| 2023 年 9 月 | [內容分期](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/content/content-staging.html) | 影片 | 了解如何建立、預覽和安排管理員直接為您商店進行的各種內容更新。 |
+| 2023 年 9 月 | [內容分期](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/content/content-staging.html?lang=zh-Hant) | 影片 | 了解如何建立、預覽和安排管理員直接為您商店進行的各種內容更新。 |
 | 2023 年 9 月 | [管理公司帳戶](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/company-accounts.html) | 影片 | 了解如何管理您的 B2B 公司帳戶，包括任何供核准的待處理請求。 |
 | 2023 年 9 月 | [B2B 銷售報價條列項目折扣](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/b2b/b2b-quote/quote-line-item-notes.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe Commerce B2B 報價的條列項目備註。 |
-| 2023 年 9 月 | [「即時搜尋」推薦內容](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search-recommendations.html) | 影片 | 了解如何將產品推薦的「即時搜尋」新增到您的商店，並提供極為引人入勝、相關且個人化的購物體驗。 |
-| 2023 年 9 月 | [適用於 Adobe Commerce 的擴增實境檢視器](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/catalog/augmented-reality.html) | 影片 | 了解 Commerce Marketplace 上提供的擴增實境檢視模組。 |
-| 2023 年 9 月 | [用於匯入目錄的選項](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/catalog/catalog-import.html) | 影片 | 了解如何使用一些原生選項，將目錄匯入 Adobe Commerce 商店。 |
-| 2023 年 9 月 | [Percona 工具組 pt-query-digest](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/backend-development/pt-query-digest.html) | 影片 | 了解為什麼使用 pt-query-digest，以及一些協助加深此推論的實際範例。 |
+| 2023 年 9 月 | [「即時搜尋」推薦內容](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search-recommendations.html?lang=zh-Hant) | 影片 | 了解如何將產品推薦的「即時搜尋」新增到您的商店，並提供極為引人入勝、相關且個人化的購物體驗。 |
+| 2023 年 9 月 | [適用於 Adobe Commerce 的擴增實境檢視器](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/catalog/augmented-reality.html?lang=zh-Hant) | 影片 | 了解 Commerce Marketplace 上提供的擴增實境檢視模組。 |
+| 2023 年 9 月 | [用於匯入目錄的選項](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/catalog/catalog-import.html?lang=zh-Hant) | 影片 | 了解如何使用一些原生選項，將目錄匯入 Adobe Commerce 商店。 |
+| 2023 年 9 月 | [Percona 工具組 pt-query-digest](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/backend-development/pt-query-digest.html?lang=zh-Hant) | 影片 | 了解為什麼使用 pt-query-digest，以及一些協助加深此推論的實際範例。 |
 
 {style="table-layout:auto"}
 
@@ -587,11 +587,11 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 9 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 QPT 1.1.36 和 QPT 1.1.37 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
+| 2023 年 9 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html?lang=zh-Hant) | 新文章 | 關於如何套用 QPT 1.1.36 和 QPT 1.1.37 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
 | 2023 年 9 月 | [UPS 運送方法整合從 SOAP 移轉至 RESTful API](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/ups-shipping-method-integration-migration-from-soap-to-restful-api.html) | 新文章 | 本文提供補丁程式以解決 Adob&#x200B;&#x200B;e Commerce 2.4.4 - 2.4.6-pX 的 United Parcel Service (UPS) 運送方法整合從 SOAP 移轉至 RESTful API 的問題。 |
 | 2023 年 9 月 | [為現有 Cloud Starter 專案設定 Adob&#x200B;&#x200B;e Commerce Intelligence 連線](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/configure-mbi-connection-for-cloud-starter-projects.html) | 新文章 | 了解當您想要為現有 Cloud Starter 專案設定 Adob&#x200B;&#x200B;e Commerce Intelligence 連線時的解決方法。 |
 | 2023 年 9 月 | [第三方安全掃描發現的漏洞應提交給 HackerOne](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/third-party-test-reports-are-handled-by-hackerone.html) | 新文章 | 了解解決第三方安全掃描發現漏洞的解決方法。 |
-| 2023 年 9 月 | [管理員登入無法運作 - 超出允許的最大工作階段](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/admin-login-not-working-allowed-session-max-size-exceed.html) | 新文章 | 了解嘗試登入管理員面板時，表單卻剛好重新整理而使您無法登入的解決方法。 |
+| 2023 年 9 月 | [管理員登入無法運作 - 超出允許的最大工作階段](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/admin-login-not-working-allowed-session-max-size-exceed.html?lang=zh-Hant) | 新文章 | 了解嘗試登入管理員面板時，表單卻剛好重新整理而使您無法登入的解決方法。 |
 
 {style="table-layout:auto"}
 
@@ -628,7 +628,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * 控制面板：[發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant)
 
-在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html) 發行說明中進一步了解最新功能、改進與修正。
+在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html?lang=zh-Hant) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) 發行說明中進一步了解最新功能、改進與修正。
 
 
 ### [!DNL Campaign] 支援知識庫{#kb-campaign}
@@ -670,12 +670,12 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [管理、編寫和使用片段](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/manage-author-use-fragments.html) | 影片 | 了解如何在 Adobe Journey Optimizer 中管理、編寫和使用片段。 |
-| 2023 年 9 月 | [網頁編輯器中的單頁應用程式 (SPA) 支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html) | 影片 | 了解如何在 Journey Optimizer 網頁編輯器中編寫單頁應用程式 (SPA)。 |
-| 2023 年 9 月 | [頻道層級報告](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/channel-level-reports.html) | 影片 | 了解如何存取、導覽和匯出頻道層級的報告。 |
-| 2023 年 9 月 | [以 CSV 格式匯出報告](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/export-reports-in-csv-format.html) | 影片 | 了解如何針對報告和單一 Widget 下載 CSV 報告。 |
-| 2023 年 9 月 | [網頁編輯器中的單頁應用程式 (SPA) 支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html) | 影片 | 了解如何在 Journey Optimizer 網頁編輯器中編寫單頁應用程式 (SPA)。 |
-| 2023 年 9 月 | [在歷程中建立應用程式內訊息](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/in-app-channel/create-an-in-app-message-in-a-journey.html) | 影片 | 了解何謂應用程式內訊息，以及在歷程中套用的方式。 了解如何在歷程中建立應用程式內訊息，以及測試和發佈歷程的方式。 |
+| 2023 年 9 月 | [管理、編寫和使用片段](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/manage-author-use-fragments.html?lang=zh-Hant) | 影片 | 了解如何在 Adobe Journey Optimizer 中管理、編寫和使用片段。 |
+| 2023 年 9 月 | [網頁編輯器中的單頁應用程式 (SPA) 支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html?lang=zh-Hant) | 影片 | 了解如何在 Journey Optimizer 網頁編輯器中編寫單頁應用程式 (SPA)。 |
+| 2023 年 9 月 | [頻道層級報告](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/channel-level-reports.html?lang=zh-Hant) | 影片 | 了解如何存取、導覽和匯出頻道層級的報告。 |
+| 2023 年 9 月 | [以 CSV 格式匯出報告](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/report-and-monitor/export-reports-in-csv-format.html?lang=zh-Hant) | 影片 | 了解如何針對報告和單一 Widget 下載 CSV 報告。 |
+| 2023 年 9 月 | [網頁編輯器中的單頁應用程式 (SPA) 支援](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/singel-page-application-support.html?lang=zh-Hant) | 影片 | 了解如何在 Journey Optimizer 網頁編輯器中編寫單頁應用程式 (SPA)。 |
+| 2023 年 9 月 | [在歷程中建立應用程式內訊息](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/in-app-channel/create-an-in-app-message-in-a-journey.html?lang=zh-Hant) | 影片 | 了解何謂應用程式內訊息，以及在歷程中套用的方式。 了解如何在歷程中建立應用程式內訊息，以及測試和發佈歷程的方式。 |
 
 {style="table-layout:auto"}
 
@@ -733,11 +733,11 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [如何稽核繼承的 Marketo Engage 執行個體](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/inherted-instance-audit.html) | 影片 | 了解執行個體中的內容，並建立可更新設定的行動計畫。此教學課程涵蓋 Marketo Engage 中最重要的部分，包括管理、行銷活動、設計工作室和資料庫，並在其中提供稽核和最佳化的技巧。 |
+| 2023 年 9 月 | [如何稽核繼承的 Marketo Engage 執行個體](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/inherted-instance-audit.html?lang=zh-Hant) | 影片 | 了解執行個體中的內容，並建立可更新設定的行動計畫。此教學課程涵蓋 Marketo Engage 中最重要的部分，包括管理、行銷活動、設計工作室和資料庫，並在其中提供稽核和最佳化的技巧。 |
 
 {style="table-layout:auto"}
 
-如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html)首頁
+如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html?lang=zh-Hant)首頁
 
 +++
 
@@ -774,7 +774,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Mix Modeler] {#mix-modeler}
 
-+++詳細資料
++++詳細資訊
 
 請參閱以下頁面了解最新資訊：
 
@@ -804,11 +804,11 @@ Last updated: **August 9, 2022**
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP] 新增資產](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce] 新增資產](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
@@ -816,13 +816,13 @@ Last updated: **August 9, 2022**
 
 [!DNL Adobe Pass] 是多螢幕電視平台，可協助電視台、有線電視網路和服務提供者，讓他們打造具吸引力的個人化觀看體驗並藉此創造營收。
 
-+++詳細資料
++++詳細資訊
 
 >[!NOTE]
 >
 >_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
 
-請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
+請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
 +++
 
@@ -841,7 +841,7 @@ Last updated: **August 9, 2022**
 如需 [!DNL Document Cloud] 教學課程，請參閱：
 
 * [Adobe Acrobat](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/overview.html?lang=zh-Hant)
-* [Adobe Acrobat Sign](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/overview.html)
+* [Adobe Acrobat Sign](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/overview.html?lang=zh-Hant)
 * [Document Cloud 學習與支援](https://helpx.adobe.com/tw/support/document-cloud.html)
 
 +++
@@ -850,7 +850,7 @@ Last updated: **August 9, 2022**
 
 針對 [!DNL Creative Cloud for enterprise] 發佈的新影片、教學課程或其他課程。
 
-+++詳細資料
++++詳細資訊
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
@@ -874,4 +874,4 @@ Last updated: **August 9, 2022**
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 9 月 | [Experience Cloud 架構圖](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/architecture-overview/experience-cloud.html) | 文章 | 了解 Experience Cloud 應用程式、應用程式服務和 Experience Platform 如何融入企業行銷架構。 |
+| 2023 年 9 月 | [Experience Cloud 架構圖](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/architecture-overview/experience-cloud.html?lang=zh-Hant) | 文章 | 了解 Experience Cloud 應用程式、應用程式服務和 Experience Platform 如何融入企業行銷架構。 |
