--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -6,14 +6,14 @@ last-update: January 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 0cea27bc-3908-4225-86b6-c7e3aad10a0c
-source-git-commit: 590f0a21ab8ef16b2ccf9f651a2ef2e7cae48ff3
-workflow-type: ht
+source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+workflow-type: tm+mt
 source-wordcount: '6121'
-ht-degree: 100%
+ht-degree: 99%
 
 ---
 
-# Experience Cloud 發行說明 - 2024 年 1 月
+# Experience Cloud版本注意事項 — 2024年1月
 
 <!-- badgeReview: label="Internal Review" type="Negative" -->
 
@@ -772,11 +772,11 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP] 新增資產](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce] 新增資產](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
