--- a/c-legacy-releases/2023/10252023.md
+++ b/c-legacy-releases/2023/10252023.md
@@ -5,14 +5,15 @@ doc-type: release notes
 last-update: November 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 0a29da7591811d364cd47a6d67cc0f61dbe2a91e
-workflow-type: ht
+exl-id: ae3934f0-adc4-4f31-87c4-6d43a7ad4fea
+source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+workflow-type: tm+mt
 source-wordcount: '5552'
-ht-degree: 100%
+ht-degree: 99%
 
 ---
 
-# Experience Cloud 發行說明 - 2023 年 11 月
+# Experience Cloud版本注意事項 — 2023年11月
 
 <!-- badgeReview: label="Internal Review" type="Negative" -->
 
@@ -777,11 +778,11 @@ Last updated: **August 9, 2022**
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP] 新增資產](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce] 新增資產](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
