--- a/c-legacy-releases/2024/03132024.md
+++ b/c-legacy-releases/2024/03132024.md
@@ -6,14 +6,14 @@ last-update: March 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 62141f30-b6b4-4813-a819-35262ed8e0c1
-source-git-commit: ae357415647cea90c958d64a901e33b9d85051ed
-workflow-type: ht
+source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+workflow-type: tm+mt
 source-wordcount: '5860'
-ht-degree: 100%
+ht-degree: 99%
 
 ---
 
-# Experience Cloud 版本注意事項 - 2023 年 3 月
+# Experience Cloud版本注意事項 — 2023年3月
 
 <!-- badgeReview: label="Internal Review" type="Negative" -->
 
@@ -768,7 +768,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce] 新增資產](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
